--- a/src/index.css
+++ b/src/index.css
@@ -59,17 +59,24 @@ h1 {
   color: #f8f8f8;
 }
 
+.blur-background {
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); /* For Safari */
+}
 .container {
   position: fixed;
   max-width: 700px;
   height: 700px;
   margin: auto;
-  padding: 0 1rem;
+  padding: 2rem 4rem;
   position: relative;
   top: 10%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10%;
 }
 
 .App .top {
@@ -108,7 +115,6 @@ h1 {
   color: #fff;
   z-index: 50;
   list-style-type: none;
-  margin-left: 317px;
   margin-top: 1rem;
 }
 
@@ -117,10 +123,19 @@ h1 {
 }
 
 .autocomplete-item{
-  display: flex;
   padding-left:10px;
   font-size: 20px;
   padding: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.parent{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 
